--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,9 @@ doctype html
 html
   head
     title= title
+    script(type='text/javascript' src='public/head.js')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+    footer
+      script(type='text/javascript' src='public/footer.js')
