--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
+    script(type='text/javascript' src='/javascripts/jquery-3.2.1.min.js')
     script(type='text/javascript' src='/javascripts/head.js')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
