--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -1,6 +1,65 @@
-body
-  padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+/**********************/
+// IMPORTING PARTIALS //
+/**********************/
 
-a
-  color: #00B7FF
+// normalize: http://necolas.github.io/normalize.css/
+@import "partials/normalize"
+
+// Sass variables
+@import "partials/variables"
+
+// typography
+@import "partials/typography"
+
+// import mixins
+@import "partials/mixins"
+
+// the grid
+@import "partials/grid"
+
+/**********************/
+//     BREAKPOINTS    //
+/**********************/
+
+//base
+@import "breakpoints/base"
+
+//larger devices
+@media only screen and (min-width: 481px) {
+	@import "breakpoints/481up"
+}
+
+//tablets/ small laptops
+@media only screen and (min-width: 768px) {
+	@import "breakpoints/768up"
+}
+
+//desktop
+@media only screen and (min-width: 1030px) {
+	@import "breakpoints/1030up"
+}
+
+//large desktop monitors/ fullscreen
+@media only screen and (min-width: 1240px) {
+	@import "breakpoints/1240up"
+}
+
+//high res/ retina
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+       only screen and (min--moz-device-pixel-ratio: 1.5),
+       only screen and (min-device-pixel-ratio: 1.5) {
+	@import "breakpoints/2x"
+}
+
+/*********************
+PRINT STYLESHEET
+Feel free to customize this. Remember to add things that won't make
+sense to print at the bottom. Things like nav, ads, and forms should
+be set to display none.
+*********************/
+@media print {
+
+	// styles in print.scss
+	@import "partials/print";
+
+}
