tweaked sass structure,

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -15,7 +15,7 @@
 @import "partials/mixins"
 
 // the grid
-@import "partials/grid"
+@import "susy"
 
 /**********************/
 //     BREAKPOINTS    //
@@ -45,21 +45,6 @@
 }
 
 //high res/ retina
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
-       only screen and (min--moz-device-pixel-ratio: 1.5),
-       only screen and (min-device-pixel-ratio: 1.5) {
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
 	@import "breakpoints/2x"
-}
-
-/*********************
-PRINT STYLESHEET
-Feel free to customize this. Remember to add things that won't make
-sense to print at the bottom. Things like nav, ads, and forms should
-be set to display none.
-*********************/
-@media print {
-
-	// styles in print.scss
-	@import "partials/print";
-
 }
