--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,7 @@ html
     title= title
     script(type='text/javascript' src='/javascripts/jquery-3.2.1.min.js')
     script(type='text/javascript' src='/javascripts/head.js')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/css/style.css')
   body
     block content
     footer
