configured sass in app.js nicely

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -2,11 +2,11 @@
 // IMPORTING PARTIALS //
 /**********************/
 
-// normalize: http://necolas.github.io/normalize.css/
-@import "partials/normalize"
-
-// Sass variables
+// variables
 @import "partials/variables"
+
+// mixins
+@import "partials/mixins"
 
 // typography
 @import "partials/typography"
