--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title= title
-    script(type='text/javascript' src='/javascripts/jquery-3.2.1.min.js')
+    script(type='text/javascript' src='/javascripts/jquery-3.2.1.slim.min.js')
     script(type='text/javascript' src='/javascripts/popper.min.js')
     script(type='text/javascript' src='/javascripts/bootstrap.min.js')
     script(type='text/javascript' src='/javascripts/main-head.js')
