--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title= title
-    meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no")
+    meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
     script(type='text/javascript' src='/javascripts/jquery-3.2.1.slim.min.js')
     script(type='text/javascript' src='/javascripts/popper.min.js')
     script(type='text/javascript' src='/javascripts/bootstrap.min.js')
