--- a/public/stylesheets/sass/breakpoints/_base.sass
+++ b/public/stylesheets/sass/breakpoints/_base.sass
@@ -1,1 +1,25 @@
+body
+  padding-top: 3.5rem
 
+h1
+  padding-bottom: 9px
+  margin-bottom: 20px
+  border-bottom: 1px solid #eee
+
+.sidebar
+  position: fixed
+  top: 51px
+  bottom: 0
+  left: 0
+  z-index: 1000
+  padding: 20px 0
+  overflow-x: hidden
+  overflow-y: auto
+  border-right: 1px solid #eee
+
+.footer
+  position: absolute
+  bottom: 0
+  width: 100%
+  height: 60px
+  line-height: 60px
