--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,9 +14,15 @@ html(lang='eng')
     header
       nav(class='navbar navbar-expand-md navbar-dark fixed-top bg-dark')
         a(href='/').navbar-brand FullFeatureX
+        button(class='navbar-toggler d-lg-none' type='button' data-toggle='collapse' data-target='#topnav' aria-controls='topnav' aria-expanded='false' aria-label='Toggle navigation')
+          span.navbar-toggler-icon
+        #topnav.collapse.navbar-collapse
+          ul.navbar-nav.mr-auto
+            include top-menu-items
     .container-fluid
-      nav(class='col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar')
+      nav(class='col-sm-3 col-md-2 d-sm-block bg-light sidebar')
         ul(class='nav nav-pills flex-column')
+          include dashboard-menu-items
       main(class='col-sm-9 ml-sm-auto col-md-10 pt-3' role='main')
         block content
     footer.footer
