--- a/public/stylesheets/sass/breakpoints/_base.sass
+++ b/public/stylesheets/sass/breakpoints/_base.sass
@@ -22,6 +22,14 @@ h1
 button
   cursor: pointer
 
+form
+  &.login
+    input
+      float: none
+      clear: both
+      display: block
+      margin: 15px auto
+
 .footer
   position: absolute
   bottom: 0
