--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -12,4 +12,5 @@ html(lang='eng')
       main(class='col-sm-9 ml-sm-auto col-md-10 pt-3' role='main')
         block content
     footer.footer
-      include footer
+      .col-sm-9.ml-sm-auto.col-md-10
+        include footer
