--- a/views/footer.pug
+++ b/views/footer.pug
@@ -1,3 +1,3 @@
-.col-sm-9.ml-sm-auto.col-md-10
+div
   p Official Drain © Lisenced Product 2017
 script(type='text/javascript' src='/javascripts/main-footer.js')
