--- a/public/stylesheets/sass/breakpoints/_576up.sass
+++ b/public/stylesheets/sass/breakpoints/_576up.sass
@@ -3,10 +3,13 @@
   margin: inherit
   position: fixed
   top: 51px
-  bottom: 0
+  bottom: -60px
   left: 0
   z-index: 1000
   overflow-x: hidden
   overflow-y: auto
   border-right: 1px solid #eee
   border-bottom: none
+
+.footer
+  text-align: left
