--- a/views/centered.pug
+++ b/views/centered.pug
@@ -4,7 +4,8 @@ html(lang='eng')
     include head
   body.centered
     header
-     include header
+      nav(class='navbar navbar-expand-md navbar-dark fixed-top bg-dark')
+        a(href='/').navbar-brand FullFeatureX
     .container.pt-3
       main(role='main')
         block content
