--- a/public/stylesheets/sass/breakpoints/_base.sass
+++ b/public/stylesheets/sass/breakpoints/_base.sass
@@ -1,3 +1,7 @@
+html
+  position: relative
+  min-height: 100%
+
 body
   padding-top: 3.5rem
 
@@ -22,6 +26,21 @@ h1
 button
   cursor: pointer
 
+li.seperator::before
+  content: '|'
+  display: block
+  padding: .5rem 1rem
+  color: rgba(255, 255, 255, .2)
+
+.shape
+  width: 200px
+  height: 200px
+  margin: 21px
+  background-color: red
+
+#dashboard
+  margin-bottom: 60px
+
 form
   &.login
     input
@@ -33,6 +52,9 @@ form
 .footer
   position: absolute
   bottom: 0
+  left: 0
   width: 100%
   height: 60px
   line-height: 60px
+  font-size: 0.8rem
+  text-align: center
