made seperator responsive. Took out that welcome to #{title} thingy

--- a/public/stylesheets/sass/breakpoints/_base.sass
+++ b/public/stylesheets/sass/breakpoints/_base.sass
@@ -27,16 +27,13 @@ button
   cursor: pointer
 
 li.seperator::before
-  content: '|'
+  content: ''
   display: block
-  padding: .5rem 1rem
-  color: rgba(255, 255, 255, .2)
-
-.shape
-  width: 200px
-  height: 200px
-  margin: 21px
-  background-color: red
+  width: 100%
+  max-width: 576px
+  padding: 0 1rem
+  margin: 0.4rem 0
+  border-bottom: 1px solid rgba(255, 255, 255, .2)
 
 #dashboard
   margin-bottom: 60px
