re implemented bootstrap, popper.js and jquery through npm

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -2,6 +2,9 @@
 // IMPORTING PARTIALS //
 /**********************/
 
+// bootstrap
+@import "/modules/bootstrap/css/bootstrap.min.css"
+
 // variables
 @import "partials/variables"
 
