--- a/views/head.pug
+++ b/views/head.pug
@@ -1,9 +1,8 @@
 title #{title} · FullFeatureX
 meta(charset='utf-8')
 meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
-script(type='text/javascript' src='/javascripts/jquery-3.2.1.slim.min.js' integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN' crossorigin='anonymous')
-script(type='text/javascript' src='/javascripts/popper.min.js')
-script(type='text/javascript' src='/javascripts/bootstrap.min.js')
+script(type='text/javascript' src='/modules/jquery/jquery.slim.min.js' integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN' crossorigin='anonymous')
+script(type='text/javascript' src='/modules/popper.js/umd/popper.min.js')
+script(type='text/javascript' src='/modules/bootstrap/js/bootstrap.min.js')
 script(type='text/javascript' src='/javascripts/main-head.js')
-link(rel='stylesheet', href='/stylesheets/css/bootstrap.min.css')
 link(rel='stylesheet', href='/stylesheets/css/style.css')
