re arranged views so all boilerplate code is in layout.pug

--- a/views/centered.pug
+++ b/views/centered.pug
@@ -1,14 +1,11 @@
-doctype html
-html(lang='eng')
-  head
-    include head
-  body.centered
-    header
-      nav(class='navbar navbar-expand-md navbar-dark fixed-top bg-dark')
-        a(href='/').navbar-brand FullFeatureX
-    .container.pt-3
-      main(role='main')
-        block content
-    footer.footer
-      .container-fluid
-        include footer
+extends layout
+block body
+  header
+    nav(class='navbar navbar-expand-md navbar-dark fixed-top bg-dark')
+      a(href='/').navbar-brand FullFeatureX
+  .container.pt-3
+    main(role='main')
+      block content
+  footer.footer
+    .container-fluid
+      include footer
