--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -1,17 +1,14 @@
-doctype html
-html(lang='eng')
-  head
-    include head
-  body
-    header
-     include header
-    #dashboard.container-fluid
-      nav(class='col-sm-3 col-md-2 d-sm-block bg-light sidebar')
-        ul(class='nav nav-pills flex-column')
-          include dashboard-menu-items
-      main(class='col-sm-9 ml-sm-auto col-md-10 pt-3' role='main')
-        h1= title
-        block content
-    footer.footer
-      .col-sm-9.ml-sm-auto.col-md-10
-        include footer
+extends layout
+block body
+  header
+   include header
+  #dashboard.container-fluid
+    nav(class='col-sm-3 col-md-2 d-sm-block bg-light sidebar')
+      ul(class='nav nav-pills flex-column')
+        include dashboard-menu-items
+    main(class='col-sm-9 ml-sm-auto col-md-10 pt-3' role='main')
+      h1= title
+      block content
+  footer.footer
+    .col-sm-9.ml-sm-auto.col-md-10
+      include footer
