added robots.txt, added morre links to layout.pug

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,8 @@ html(lang='eng' class='no-js')
     title #{title} · FullFeatureX
     meta(name='description' content='')
     meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
+    link(rel='manifest' href='site.webmanifest')
+    link(rel='apple-touch-icon' href='/images/icon.png')
     script.
       (function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)
     link(rel='stylesheet', href='/stylesheets/css/style.css')
