changes speech marks

--- a/views/centered.pug
+++ b/views/centered.pug
@@ -1,10 +1,10 @@
 extends layout
 block body
   header
-    nav(class='navbar navbar-expand-md navbar-dark fixed-top bg-dark')
-      a(href='/').navbar-brand FullFeatureX
+    nav(class="navbar navbar-expand-md navbar-dark fixed-top bg-dark")
+      a(href="/").navbar-brand FullFeatureX
   .container.pt-3
-    main(role='main')
+    main(role="main")
       block content
   footer.footer
     .container-fluid
