--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -3,10 +3,10 @@ block body
   header
    include header
   #dashboard.container-fluid
-    nav(class='col-sm-3 col-md-2 d-sm-block bg-light sidebar')
-      ul(class='nav nav-pills flex-column')
+    nav(class="col-sm-3 col-md-2 d-sm-block bg-light sidebar")
+      ul(class="nav nav-pills flex-column")
         include dashboard-menu-items
-    main(class='col-sm-9 ml-sm-auto col-md-10 pt-3' role='main')
+    main(class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main")
       h1= title
       block content
   footer.footer
