--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,19 +1,19 @@
 doctype html
-html(lang='eng' class='no-js')
+html(lang="eng" class="no-js")
   head
-    meta(charset='utf-8')
-    meta(http-equiv='x-ua-compatible' content='ie=edge')
+    meta(charset="utf-8")
+    meta(http-equiv="x-ua-compatible" content="ie=edge")
     title #{title} · FullFeatureX
-    meta(name='description' content='')
-    meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
-    link(rel='manifest' href='site.webmanifest')
-    link(rel='apple-touch-icon' href='/images/icon.png')
+    meta(name="description" content="")
+    meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
+    link(rel="manifest" href="site.webmanifest")
+    link(rel="apple-touch-icon" href="/images/icon.png")
     script.
-      (function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)
-    link(rel='stylesheet', href='/stylesheets/css/style.css')
+      (function(H){H.className=H.className.replace(/\bno-js\b/,"js")})(document.documentElement)
+    link(rel="stylesheet", href="/stylesheets/css/style.css")
   body(class=bodyClasses)
     block body
-    script(type='text/javascript' src='/modules/jquery/jquery.slim.min.js' integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN' crossorigin='anonymous')
-    script(type='text/javascript' src='/modules/popper.js/umd/popper.min.js')
-    script(type='text/javascript' src='/modules/bootstrap/js/bootstrap.min.js')
-    script(type='text/javascript' src='/javascripts/main.js')
+    script(type="text/javascript" src="/modules/jquery/jquery.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
+    script(type="text/javascript" src="/modules/popper.js/umd/popper.min.js")
+    script(type="text/javascript" src="/modules/bootstrap/js/bootstrap.min.js")
+    script(type="text/javascript" src="/javascripts/main.js")
