--- a/views/top-menu-items.pug
+++ b/views/top-menu-items.pug
@@ -2,8 +2,8 @@ mixin list-item(url, label)
   li.nav-item
     a.nav-link(href=url)=label
 
-+list-item('/dashboard', 'Dashboard')
-+list-item('/profile', 'Profile')
-+list-item('/help', 'Help')
++list-item("/dashboard", "Dashboard")
++list-item("/profile", "Profile")
++list-item("/help", "Help")
 li.seperator
-+list-item('/logout', 'Logout')
++list-item("/logout", "Logout")
