--- a/views/login.pug
+++ b/views/login.pug
@@ -4,6 +4,6 @@ block content
   h1= title
   .user-box
     form.login
-      input(type='text', name='user', placeholder='username')
-      input(type='password', name='password', placeholder='password')
-      input(type='submit')
+      input(type="text", name="user", placeholder="username")
+      input(type="password", name="password", placeholder="password")
+      input(type="submit")
