--- a/views/dashboard-menu-items.pug
+++ b/views/dashboard-menu-items.pug
@@ -2,5 +2,5 @@ mixin list-item(url, label)
   li.nav-item
     a.nav-link(href=url)=label
     
-+list-item("/drains", "Drains")
++list-item("/bars", "Bars")
 +list-item("/graphs", "Graphs")
