went off course and fixed a problem with the page scrolling a bit. reimplemented footer with bootstrap which has seemed to fix the problem

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -10,5 +10,6 @@ block body
       h1= title
       block content
   footer.footer
-    .col-sm-9.ml-sm-auto.col-md-10
-      include footer
+    .footer-content.col-sm-9.ml-sm-auto.col-md-10.d-flex.align-content-center.flex-wrap
+      .p-2
+        include footer
