--- a/public/stylesheets/sass/breakpoints/_base.sass
+++ b/public/stylesheets/sass/breakpoints/_base.sass
@@ -55,6 +55,7 @@ form
   left: 0
   width: 100%
   height: 60px
-  line-height: 60px
   font-size: 0.8rem
   text-align: center
+  .footer-content
+    height: 100%
