--- a/views/centered.pug
+++ b/views/centered.pug
@@ -7,5 +7,6 @@ block body
     main(role="main")
       block content
   footer.footer
-    .container-fluid
-      include footer
+    .footer-content.container-fluid.d-flex.align-content-center.flex-wrap
+      .p-2
+        include footer
