commented out redundant selector

--- a/public/stylesheets/sass/breakpoints/_base.sass
+++ b/public/stylesheets/sass/breakpoints/_base.sass
@@ -41,9 +41,9 @@ li.seperator::before
 #dashboard
   margin-bottom: 60px
 
-form
-  &.login
-    
+// form
+//   &.login
+//
 
 .footer
   position: absolute
