layout changes to make sure footer looks nice on safari

--- a/views/centered.pug
+++ b/views/centered.pug
@@ -7,6 +7,6 @@ block body
     main(role="main")
       block content
   footer.footer
-    .footer-content.container-fluid.d-flex.align-content-center.flex-wrap
-      .p-2
+    .footer-content.container-fluid.d-flex.align-items-center.flex-wrap
+      div
         include footer
