--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -10,6 +10,6 @@ block body
       h1= title
       block content
   footer.footer
-    .footer-content.col-sm-9.ml-sm-auto.col-md-10.d-flex.align-content-center.flex-wrap
-      .p-2
+    .footer-content.col-sm-9.ml-sm-auto.col-md-10.d-flex.align-items-center.flex-wrap
+      div
         include footer
