used variable for footer height

--- a/public/stylesheets/sass/breakpoints/_base.sass
+++ b/public/stylesheets/sass/breakpoints/_base.sass
@@ -39,7 +39,7 @@ li.seperator::before
   border-bottom: 1px solid rgba(255, 255, 255, .2)
 
 #dashboard
-  margin-bottom: 60px
+  margin-bottom: $footer-height
 
 // form
 //   &.login
@@ -50,8 +50,8 @@ li.seperator::before
   bottom: 0
   left: 0
   width: 100%
-  height: 60px
+  height: $footer-height
   font-size: 0.8rem
   text-align: center
   .footer-content
-    height: 100%
+    height: $footer-height
