--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,7 +10,7 @@ html(lang="eng" class="no-js")
       (function(H){H.className=H.className.replace(/\bno-js\b/,"js")})(document.documentElement)
     link(rel="manifest" href="site.webmanifest")
     link(rel="apple-touch-icon" href="/images/icon.png")
-    link(rel="stylesheet", href="/stylesheets/css/style.css")
+    link(rel="stylesheet" href="/stylesheets/css/style.css")
   body(class=bodyClasses)
     block body
     script(type="text/javascript" src="/modules/jquery/jquery.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
