--- a/views/centered.pug
+++ b/views/centered.pug
@@ -3,6 +3,11 @@ block body
   header
     nav(class="navbar navbar-expand-md navbar-dark fixed-top bg-dark")
       a(href="/").navbar-brand FullFeatureX
+      button(class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#topnav" aria-controls="topnav" aria-expanded="false" aria-label="Toggle navigation")
+        span.navbar-toggler-icon
+      #topnav.collapse.navbar-collapse
+        ul.navbar-nav.mr-auto
+          include top-menu-items
   .container.pt-3
     main(role="main")
       block content
