--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,8 @@ html(lang="eng" class="no-js")
     script.
       (function(H){H.className=H.className.replace(/\bno-js\b/,"js")})(document.documentElement)
     link(rel="manifest" href="site.webmanifest")
-    link(rel="apple-touch-icon" href="/icon.png")
+    link(rel="apple-touch-icon" href="icon.png")
+    link(rel="icon" href="favicon.ico" type="image/x-icon")
     link(rel="stylesheet" href="/stylesheets/css/style.css")
   body(class=bodyClasses)
     block body
