--- a/server/views/login.pug
+++ b/server/views/login.pug
@@ -12,7 +12,7 @@ block content
             strong Something went wrong… 
             br
             span #{warning}
-        form.login(action="/login" method="post")
+        form.login(action="/users/login" method="post")
           .form-group
             label(for="loginUsername") Username
             input(id="loginUsername" class="form-control" name="username" type="username" placeholder="Username")
