--- a/server/views/top-menu-items.pug
+++ b/server/views/top-menu-items.pug
@@ -9,5 +9,5 @@ if username
   +list-item("/profile", "Logged in as " + username)
   +list-item("/logout", "Logout")
 else
-  +list-item("/login", "Login")
+  +list-item("/users/login", "Login")
   +list-item("/register", "Register")
