implemented renderobject function to promote consistency

--- a/server/views/top-menu-items.pug
+++ b/server/views/top-menu-items.pug
@@ -6,7 +6,7 @@ mixin list-item(url, label)
 +list-item("/help", "Help")
 li.seperator
 if username
-  +list-item("/users/profile", "Logged in as " + username)
+  +list-item("/users/profile", "Welcome, " + username)
   +list-item("/users/logout", "Logout")
 else
   +list-item("/users/login", "Login")
