fixed up profile implementation

--- a/server/views/profile.pug
+++ b/server/views/profile.pug
@@ -1,6 +1,6 @@
 extends dashboard
 block content
-  form.profile.container-fluid(action="/profile" method="post")
+  form.profile.container-fluid(action="/users/profile" method="post")
     .row
       .col-md-4
         .form-group
