updated integrity vals... I think

--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -14,7 +14,7 @@ html(lang="eng" class="no-js")
     link(rel="stylesheet" href="/stylesheets/css/style.css")
   body(class=bodyClasses)
     block body
-    script(type="text/javascript" src="/vendor/jquery/jquery.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
-    script(type="text/javascript" src="/vendor/popper.js/umd/popper.min.js")
-    script(type="text/javascript" src="/vendor/bootstrap/js/bootstrap.min.js")
+    script(type="text/javascript" src="/vendor/jquery/jquery.slim.min.js" integrity="sha1-XE2d5lKvbNCncBVKYxu6ErAVx4c=" crossorigin="anonymous")
+    script(type="text/javascript" src="/vendor/popper.js/umd/popper.min.js" integrity="sha1-4ef/ZcxD98+c8W8VEKdegfhPRWU=" crossorigin="anonymous")
+    script(type="text/javascript" src="/vendor/bootstrap/js/bootstrap.min.js" integrity="sha512-DzGtdTlKbrMoGMpz0LigKSqJ+MgtFKxA791PU/q062OlRG0HybNZcTLH7rpDAmLS66Y3esN9yzKHLLbqa5UR3w==" crossorigin="anonymous")
     script(type="text/javascript" src="/javascripts/main.js")
