--- a/server/views/users.pug
+++ b/server/views/users.pug
@@ -4,16 +4,16 @@ block content
   table.table.table-hover.table-sm.table-responsive-xl
     thead
       tr
-        th(scope="col") user_id
-        th(scope="col") user_name
-        th(scope="col") user_password
-        th(scope="col") user_email
-        th(scope="col") user_type
+        th(scope="col") id
+        th(scope="col") username
+        th(scope="col") hash
+        th(scope="col") email
+        th(scope="col") type
       tbody
         for user in users
           tr
-            th(scope="row") #{user.user_id}
-            td #{user.user_name}
-            td #{user.user_password}
-            td #{user.user_email}
-            td #{user.user_type}
+            th(scope="row") #{user.id}
+            td #{user.username}
+            td #{user.hash}
+            td #{user.email}
+            td #{user.type}
