--- a/src/server/views/users.pug
+++ b/src/server/views/users.pug
@@ -1,8 +1,8 @@
 extends dashboard
 
 block content
-  table.table.table-hover.table-sm.table-responsive-xl
-    thead
+  table.table.table-hover.table-sm.table-responsive-xl.table-striped
+    thead.thead-light
       tr
         th(scope="col") id
         th(scope="col") username
