added border to table

--- a/src/server/views/users.pug
+++ b/src/server/views/users.pug
@@ -1,7 +1,7 @@
 extends dashboard
 
 block content
-  table.table.table-hover.table-sm.table-responsive-xl.table-striped
+  table.table.table-hover.table-sm.table-responsive-xl.table-striped.table-bordered
     thead.thead-light
       tr
         th(scope="col") id
