app looks at popper.js/umd. may or may not regret this move later on

--- a/src/server/views/layout.pug
+++ b/src/server/views/layout.pug
@@ -15,6 +15,6 @@ html(lang="eng" class="no-js")
   body(class=bodyClasses)
     block body
     script(type="text/javascript" src="/vendor/jquery/jquery.slim.min.js" integrity="sha1-XE2d5lKvbNCncBVKYxu6ErAVx4c=" crossorigin="anonymous")
-    script(type="text/javascript" src="/vendor/popper.js/umd/popper.min.js" integrity="sha1-4ef/ZcxD98+c8W8VEKdegfhPRWU=" crossorigin="anonymous")
+    script(type="text/javascript" src="/vendor/popper.js/popper.min.js" integrity="sha1-4ef/ZcxD98+c8W8VEKdegfhPRWU=" crossorigin="anonymous")
     script(type="text/javascript" src="/vendor/bootstrap/js/bootstrap.min.js" integrity="sha512-DzGtdTlKbrMoGMpz0LigKSqJ+MgtFKxA791PU/q062OlRG0HybNZcTLH7rpDAmLS66Y3esN9yzKHLLbqa5UR3w==" crossorigin="anonymous")
     script(type="text/javascript" src="/javascripts/main.js")
