--- a/src/client/stylesheets/sass/breakpoints/_base.sass
+++ b/src/client/stylesheets/sass/breakpoints/_base.sass
@@ -8,11 +8,6 @@ html
 body
   padding-top: 3.5rem
 
-h1
-  padding-bottom: 9px
-  margin-bottom: 20px
-  border-bottom: 1px solid #eee
-
 .sidebar
   width: calc(100% + 30px)
   margin: 0 -15px
@@ -41,9 +36,12 @@ li.seperator::before
 #dashboard
   margin-bottom: $footer-height
 
-// form
-//   &.login
-//
+form
+  &.form-login
+    width: 100%
+    max-width: 420px
+    padding: 15px
+    margin: 0 auto
 
 .footer
   position: absolute
