--- a/src/client/stylesheets/sass/breakpoints/_base.sass
+++ b/src/client/stylesheets/sass/breakpoints/_base.sass
@@ -37,7 +37,8 @@ li.seperator::before
   margin-bottom: $footer-height
 
 form
-  &.form-login
+  &.form-login,
+  &.form-register
     width: 100%
     max-width: 420px
     padding: 15px
