--- a/src/server/views/register.pug
+++ b/src/server/views/register.pug
@@ -1,29 +1,27 @@
 extends centered
 
 block content
-  h1= title
-  .container
-    .row
-      .col-md-5
-        if warning
-          .alert.alert-warning.alert-dismissible.fade.show(role="alert")
-            button(type="button" class="close" data-dismiss="alert" aria-label="Close")
-              span(aria-hidden="true") &times;
-            strong Something went wrong… 
-            br
-            span #{warning}
-        form.register(action="/users/register" method="post")
-          .form-group
-            label(for="registerUsername") Username
-            input(id="registerUsername" class="form-control" name="username" type="username" placeholder="Username")
-          .form-group
-            label(for="registerEmail") Email
-            input(id="registerEmail" class="form-control" name="email" type="email" placeholder="Email")
-          .form-group
-            label(for="registerPassword") Password
-            input(id="registerPassword" class="form-control" name="password" type="password", placeholder="Password")
-          .form-group
-            label(for="registerConfirmPassword") Confirm Password
-            input(id="registerConfirmPassword" class="form-control" name="confirmpassword" type="password", placeholder="Confirm Password")
-          .form-group.text-right
-            button(type="submit" class="btn btn-primary") Submit
+  if warning
+    .alert.alert-warning.alert-dismissible.fade.show(role="alert")
+      button(type="button" class="close" data-dismiss="alert" aria-label="Close")
+        span(aria-hidden="true") &times;
+      strong Something went wrong… 
+      br
+      span #{warning}
+  form.form-register(action="/users/register" method="post")
+    .text-center.mb-4
+      h1.h3.mb-3.font-weight-normal= title
+    .form-group
+      label(for="registerUsername") Username
+      input(id="registerUsername" class="form-control" name="username" type="username" placeholder="Username")
+    .form-group
+      label(for="registerEmail") Email
+      input(id="registerEmail" class="form-control" name="email" type="email" placeholder="Email")
+    .form-group
+      label(for="registerPassword") Password
+      input(id="registerPassword" class="form-control" name="password" type="password", placeholder="Password")
+    .form-group
+      label(for="registerConfirmPassword") Confirm Password
+      input(id="registerConfirmPassword" class="form-control" name="confirmpassword" type="password", placeholder="Confirm Password")
+    .form-group.text-right
+      button(type="submit" class="btn btn-lg btn-primary") Submit
