--- a/src/client/stylesheets/sass/breakpoints/_base.sass
+++ b/src/client/stylesheets/sass/breakpoints/_base.sass
@@ -7,6 +7,19 @@ html
 
 body
   padding-top: 3.5rem
+  &.float
+    height: 100vh
+    main[role="main"]
+      height: 80%
+      display: -ms-flexbox
+      display: -webkit-box
+      display: flex
+      -ms-flex-align: center
+      -ms-flex-pack: center
+      -webkit-box-align: center
+      align-items: center
+      -webkit-box-pack: center
+      justify-content: center
 
 .sidebar
   width: calc(100% + 30px)
