made floating forms less glitchy

--- a/src/client/stylesheets/sass/breakpoints/_base.sass
+++ b/src/client/stylesheets/sass/breakpoints/_base.sass
@@ -7,19 +7,6 @@ html
 
 body
   padding-top: 3.5rem
-  &.float
-    height: 100vh
-    main[role="main"]
-      height: 80%
-      display: -ms-flexbox
-      display: -webkit-box
-      display: flex
-      -ms-flex-align: center
-      -ms-flex-pack: center
-      -webkit-box-align: center
-      align-items: center
-      -webkit-box-pack: center
-      justify-content: center
 
 .sidebar
   width: calc(100% + 30px)
@@ -46,7 +33,7 @@ li.seperator::before
   margin: 0.4rem 0
   border-bottom: 1px solid rgba(255, 255, 255, .2)
 
-#dashboard
+#dashboard, #centered
   margin-bottom: $footer-height
 
 form
