--- a/src/server/views/centered.pug
+++ b/src/server/views/centered.pug
@@ -8,8 +8,9 @@ block body
       #topnav.collapse.navbar-collapse
         ul.navbar-nav.mr-auto
           include top-menu-items
-  main(role="main")
-      block content
+  #centered.container-fluid
+    main(role="main")
+        block content
   footer.footer
     .footer-content.container-fluid.d-flex.align-items-center.flex-wrap
       div
