--- a/src/client/stylesheets/sass/breakpoints/_576up.sass
+++ b/src/client/stylesheets/sass/breakpoints/_576up.sass
@@ -1,3 +1,20 @@
+body
+  &.float
+    height: 100vh
+    #centered
+      height: 80%
+      display: -ms-flexbox
+      display: -webkit-box
+      display: flex
+      -ms-flex-align: center
+      -ms-flex-pack: center
+      -webkit-box-align: center
+      align-items: center
+      -webkit-box-pack: center
+      justify-content: center
+      main
+        width: 100%
+
 .sidebar
   width: 100%
   margin: inherit
