installed validate.js

--- a/src/server/views/layout.pug
+++ b/src/server/views/layout.pug
@@ -17,4 +17,5 @@ html(lang="eng" class="no-js")
     script(type="text/javascript" src="/vendor/jquery/jquery.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
     script(type="text/javascript" src="/vendor/popper.js/popper.min.js" integrity="sha384-XbAuA4HpSD4UaQ65KabStv/bDZ1U0oTBZJoaOx/gNl0wcK3oYBcMsyFYTkTwBECX" crossorigin="anonymous")
     script(type="text/javascript" src="/vendor/bootstrap/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous")
+    script(type="text/javascript" src="/vendor/validate.js/validate.min.js" integrity="sha384-OGI5I8iDNZDfImLBIyAMJEqMRK9uqSgRjv11sxXsT+b2ATXskgVNoBXBj+doEeaO" crossorigin="anonymous")
     script(type="text/javascript" src="/javascripts/main.js")
