--- a/src/server/views/register.pug
+++ b/src/server/views/register.pug
@@ -1,27 +1,27 @@
 extends centered
 
 block content
-  if warning
-    .alert.alert-warning.alert-dismissible.fade.show(role="alert")
-      button(type="button" class="close" data-dismiss="alert" aria-label="Close")
-        span(aria-hidden="true") &times;
-      strong Something went wrong… 
-      br
-      span #{warning}
   form.form-register(action="/users/register" method="post")
     .text-center.mb-4
       h1.h3.mb-3.font-weight-normal= title
     .form-group
       label(for="registerUsername") Username
-      input(id="registerUsername" class="form-control" name="username" type="username" placeholder="Username")
+      input(id="registerUsername" class="form-control" name="username" type="username" placeholder="Username" required)
     .form-group
       label(for="registerEmail") Email
-      input(id="registerEmail" class="form-control" name="email" type="email" placeholder="Email")
+      input(id="registerEmail" class="form-control" name="email" type="email" placeholder="Email" required)
     .form-group
       label(for="registerPassword") Password
-      input(id="registerPassword" class="form-control" name="password" type="password", placeholder="Password")
+      input(id="registerPassword" class="form-control" name="password" type="password", placeholder="Password" required)
     .form-group
       label(for="registerConfirmPassword") Confirm Password
-      input(id="registerConfirmPassword" class="form-control" name="confirmpassword" type="password", placeholder="Confirm Password")
+      input(id="registerConfirmPassword" class="form-control" name="confirmpassword" type="password", placeholder="Confirm Password" required)
     .form-group.text-right
       button(type="submit" class="btn btn-lg btn-primary") Submit
+    if warning
+      .alert.alert-warning.alert-dismissible.fade.show(role="alert")
+        button(type="button" class="close" data-dismiss="alert" aria-label="Close")
+          span(aria-hidden="true") &times;
+        strong Something went wrong… 
+        br
+        span #{warning}
