changed 'javascripts' to 'scripts' to be less languageist

--- a/src/server/views/layout.pug
+++ b/src/server/views/layout.pug
@@ -17,4 +17,4 @@ html(lang="eng" class="no-js")
     script(type="text/javascript" src="/vendor/jquery/jquery.slim.min.js")
     script(type="text/javascript" src="/vendor/popper.js/popper.min.js")
     script(type="text/javascript" src="/vendor/bootstrap/js/bootstrap.min.js")
-    script(type="text/javascript" src="/javascripts/main.js")
+    script(type="text/javascript" src="/scripts/main.js")
