--- a/src/client/stylesheets/sass/breakpoints/_base.sass
+++ b/src/client/stylesheets/sass/breakpoints/_base.sass
@@ -2,11 +2,8 @@
   outline: none !important
 
 html
+  height: 100
   position: relative
-  min-height: 100%
-
-body
-  padding-top: 3.5rem
 
 .sidebar
   width: calc(100% + 30px)
@@ -45,11 +42,10 @@ form
     margin: 0 auto
 
 .footer
-  position: absolute
-  bottom: 0
-  left: 0
   width: 100%
   height: $footer-height
+  bottom: 0
+  left: 0
   font-size: 0.8rem
   text-align: center
   .footer-content
