--- a/src/server/views/centered.pug
+++ b/src/server/views/centered.pug
@@ -1,7 +1,7 @@
 extends layout
 block body
-  header
-    nav(class="navbar navbar-expand-md navbar-dark fixed-top bg-dark")
+  header.sticky-top
+    nav(class="navbar navbar-expand-md navbar-dark bg-dark")
       a(href="/").navbar-brand FullFeatureX
       button(class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#topnav" aria-controls="topnav" aria-expanded="false" aria-label="Toggle navigation")
         span.navbar-toggler-icon
@@ -11,7 +11,7 @@ block body
   #centered.container-fluid
     main(role="main")
         block content
-  footer.footer
+  footer(class="footer position-absolute")
     .footer-content.container-fluid.d-flex.align-items-center.flex-wrap
       div
         include footer
