--- a/src/server/views/header.pug
+++ b/src/server/views/header.pug
@@ -1,4 +1,4 @@
-nav(class="navbar navbar-expand-md navbar-dark fixed-top bg-dark")
+nav(class="navbar navbar-expand-md navbar-dark bg-dark")
   a(href="/").navbar-brand FullFeatureX
   button(class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#topnav" aria-controls="topnav" aria-expanded="false" aria-label="Toggle navigation")
     span.navbar-toggler-icon
