now using full jquery library for when you need to do more things with jquery

--- a/src/server/views/layout.pug
+++ b/src/server/views/layout.pug
@@ -14,7 +14,7 @@ html(lang="eng" class="no-js")
     link(rel="stylesheet" href="/stylesheets/css/style.css")
   body(class=bodyClasses)
     block body
-    script(type="text/javascript" src="/vendor/jquery/jquery.slim.min.js")
+    script(type="text/javascript" src="/vendor/jquery/jquery.min.js")
     script(type="text/javascript" src="/vendor/popper.js/popper.min.js")
     script(type="text/javascript" src="/vendor/bootstrap/js/bootstrap.min.js")
     script(type="text/javascript" src="/scripts/main.js")
