--- a/src/server/views/error.pug
+++ b/src/server/views/error.pug
@@ -1,6 +1,11 @@
 extends centered
 
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+  .container
+    div(class="alert alert-danger my-5 text-center" role="alert")
+      h1.alert-heading We have encountered an error...
+      h2 #{error.status} - #{message}
+    if(error.stack)
+      div(class="alert alert-info mb-4" role="alert")
+        h3(class="alert-heading mb-3 text-center") Here is the error stack
+        pre #{error.stack}
