Fixed internal error when updating user, adding password input in the process

--- a/src/server/views/profile.pug
+++ b/src/server/views/profile.pug
@@ -9,6 +9,9 @@ block content
         .form-group
           label(for="profileChangeEmail") Change your email
           input(id="profileChangeEmail" class="form-control" placeholder="Change your email" name="email" type="email" value=email)
+        .form-group
+          label(for="profileChangePassword") Change your password
+          input(id="profileChangePassword" class="form-control" type="text" name="password" placeholder="New Password")
       .col-md-6
         .form-group
           if user_image
